--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,7 @@ body {
 	background-image: -ms-radial-gradient(50% 50%, ellipse closest-side, #000, #111 100%);
 	background-image: radial-gradient(50% 50%, ellipse closest-side, #000, #111 100%);
 }
+
+audio {
+	display: none;
+}
